--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             ></span>
           </h1>
         <p class="lead">I am currently pursuing Computer Science at Toronto Metropolitan University.</p>
-        <a href="C:\Users\Admin\Documents\Resume Carlton Valerian Gnanamalai.pdf" class="btn-light">Resume</a>
+        <a href="https://drive.google.com/file/d/1PuL3XsCk7T67OBOGFNbT0P8-bPy3w73H/view?usp=sharing" class="btn-light">Resume</a>
       </div>
     </div>
   </header>
