--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             ></span>
           </h1>
         <p class="lead">I am currently pursuing Computer Science at Toronto Metropolitan University.</p>
-        <a href="https://drive.google.com/file/d/1AD1RqLfIXtSJybxQ1Wi8q4PQjB21n_Fg/view" class="btn-light">Resume</a>
+        <a href="file:///C:/Users/Admin/Documents/Resume%20Co-op/Resume%20Carlton%20Co-op.pdf" class="btn-light">Resume</a>
       </div>
     </div>
   </header>
