--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div>
       <i class="fas fa-desktop fa-2x"></i>
       <h3>Full Stack Development</h3>
-      <p>As a first-year computer science student, I am developing my skills in full stack development.<br>
+      <p>As a second-year computer science student, I am developing my skills in full stack development.<br>
          I have a strong foundation in front-end as well as back-end technologies such as HTML, CSS, Node.js, Java and Python.<br>
          Through personal projects and coursework, I am gaining experience in building web applications from start to finish.<br>
          I am excited to continue expanding my knowledge in this field and applying it to real-world projects.</p>
