--- a/index.html
+++ b/index.html
@@ -109,13 +109,26 @@
         
 
       <div class="tab-titles">
+        <p class="tab-links active-link" onclick="opentab('maji curry')">Maji Curry</p>
         <p class="tab-links active-link" onclick="opentab('tmu ux')">TMU UX</p>
         <p class="tab-links" onclick="opentab('mantra solutions')">Mantra Solutions</p>
       </div>  
-      <div class="tab-contents active-tab" id="tmu ux"  >
+      <div class="tab-contents active-tab" id="maji curry">
+        <ul>
+          <li><h3> Chef</h3></li>
+          <li><span>August 2023 - Present</span><br>•	Successfully managing a high-volume kitchen, preparing an average of 200 Japanese cuisine meals daily while maintaining the highest standards of quality and presentation.
+           <br> •	Reduced kitchen waste by 15% through improved inventory management techniques
+            <br>•	Working effectively in a fast-paced, high-pressure environment, maintaining a positive attitude and teamwork.  
+            <br>•	Developed strong time-management skills to handle multiple tasks simultaneously.
+            </li>
+        </ul>
+      </div>
+      <div class="tab-contents" id="tmu ux">
         <ul>
           <li><h3> Logistics Associate</h3></li>
-          <li><span>April 2022 - Present</span><br>• Support the VP of Logistics and Events with event materials, feedback forms, and keeping track of engagements</li>
+          <li><span>April 2022 - Present</span><br>•	Providing essential support to the VP of Logistics and Events, assisting with event materials procurement, distribution, and inventory management.
+          <br>•	Playing a key role in maintaining organized records of event engagements, managing feedback forms, and tracking participant attendance and feedback for analysis and reporting purposes. 
+</li>
         </ul>
       </div>
       <div class="tab-contents" id="mantra solutions">
