--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
       <div class="tab-titles">
         <p class="tab-links active-link" onclick="opentab('maji curry')">Maji Curry</p>
-        <p class="tab-links active-link" onclick="opentab('tmu ux')">TMU UX</p>
+        <p class="tab-links" onclick="opentab('tmu ux')">TMU UX</p>
         <p class="tab-links" onclick="opentab('mantra solutions')">Mantra Solutions</p>
       </div>  
       <div class="tab-contents active-tab" id="maji curry">
