--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="about-info">
         <img src="img/about.jpg" alt="" class="bio-image">
         <div class="bio bg-light">
-          <p>Hello, I am Carlton Gnanamalai, a first-year computer science student with a passion for problem-solving and innovation. Growing up, I was always fascinated by the way technology can improve people's lives, and I knew I wanted to be a part of that positive change.<br>
+          <p>Hello, I am Carlton Gnanamalai, a second-year computer science student with a passion for problem-solving and innovation. Growing up, I was always fascinated by the way technology can improve people's lives, and I knew I wanted to be a part of that positive change.<br>
             As a student, I have already gained experience in various programming languages, including Java, Python, and C++. Through my coursework, I have developed a strong foundation in algorithms, data structures, and software development, and I am excited to continue expanding my knowledge in these areas.<br>
             In my free time, I enjoy working on personal coding projects, and staying up-to-date with the latest tech news. I also love learning about different cultures and languages, and I have also played professional soccer and I have been a National Champion in Karate.<br>
             I am looking forward to using my skills and knowledge to make a positive impact in the technological industry, and I am excited to see where my journey in computer science takes me.
